# LabN_RPG

./: .gitignore  .gitmodules  CMakeLists.txt  LabN_RPG.sln  README.md
LabN_RPG/: CMakeLists.txt  LabN_RPG.vcxproj  LabN_RPG.vcxproj.filters
LabN_RPG/Libs/yaml-cpp/: yaml-cppd.exp  yaml-cppd.lib
LabN_RPG/resources/Animations/: Anim_Hero.json  Anim_Hero.yaml  Anim_Oldman.json
LabN_RPG/resources/Maps/: DesertMap.json  desert.tiled-session
LabN_RPG/resources/Maps/DesertMap/: DesertMap.json  DesertMap.png.json  DesertMap.tmx
LabN_RPG/resources/Maps/ForestMap/: ForestMap..tmx  ForestMap.json  ForestMap.png.json  ForestMap.tmj  ForestMap.tmx
LabN_RPG/resources/Sprites/Actors/: Hero.png.json  Oldman.png.json
LabN_RPG/resources/Worlds/: World_Desert.json  World_Forest.json
LabN_RPG/src/include/: Database.h  Game.h  Locator.h  vgpch.h
LabN_RPG/src/include/Common/: GameplayUtils.h  MathUtils.h
LabN_RPG/src/include/Common/AnimationStates/: IAnimationState.h  IdleAnimationState.h  MovementAnimationState.h
LabN_RPG/src/include/Common/ResourceManagement/: AnimationProvider.h  TextureProvider.h
LabN_RPG/src/include/Common/SpacePartitioning/: PartitionCell.h  PartitionGrid.h
LabN_RPG/src/include/Components/: AnimationComponent.h  CameraComponent.h  CommonTags.h  Components.h  DirtyTransformComponent.h  DrawableComponent.h  MapComponent.h  MovementComponent.h  NodeComponent.h  PlaceholdersComponent.h  PlayerControllerComponent.h  RectColliderComponent.h  SortingLayers.h  SpriteComponent.h  TransformComponent.h  WorldPartitionComponent.h
LabN_RPG/src/include/Input/: IInputDevice.h  Keyboard.h  Mouse.h  PCInputDevice.h
LabN_RPG/src/include/Prefabs/: ActorPrefab.h  MapFactory.h
LabN_RPG/src/include/Systems/: ActorMovementSystem.h  AnimationStateSystem.h  AnimationSystem.h  ApplyTransformSystem.h  CameraFollowingSystem.h  CollisionSystem.h  CullingRenderSystem.h  ISystem.h  MapRenderSystem.h  PlayerControllerSystem.h  SpriteRenderSystem.h  Systems.h
LabN_RPG/src/include/Systems/Gizmo/: ColliderDebugRenderSystem.h  PivotDebugRenderSystem.h  (+1 more)
LabN_RPG/src/include/Window/: Window.h
LabN_RPG/src/include/World/: GameWorld.h  World.h
LabN_RPG/src/src/: Game.cpp  Main.cpp
LabN_RPG/src/src/Common/: GameplayUtils.cpp
LabN_RPG/src/src/Input/: Keyboard.cpp  Mouse.cpp
LabN_RPG/src/src/Prefabs/: ActorPrefab.cpp  MapFactory.cpp
LabN_RPG/src/src/Systems/: ActorMovementSystem.cpp  AnimationStateSystem.cpp  AnimationSystem.cpp  ApplyTransformSystem.cpp  CameraFollowingSystem.cpp  CollisionSystem.cpp  CullingRenderSystem.cpp  MapRenderSystem.cpp  PlayerControllerSystem.cpp  SpriteRenderSystem.cpp
LabN_RPG/src/src/Window/: Window.cpp
LabN_RPG/src/src/World/: GameWorld.cpp  World.cpp
(+7 files in other folders)
